Fixed overflow truncation in Firefox. It would be better to truncate .story-list instead of .rounded.

--- a/views/styles/site/container/row.styl
+++ b/views/styles/site/container/row.styl
@@ -14,6 +14,9 @@ block-height = 250px
         padding-left 0px
         padding-right 0px
 
+        .row-story
+            overflow hidden
+
         a.hover
             height 100%
             margin-bottom -9px
